--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "docker:up": "docker compose -f ./postgres/docker-compose.yml up -d",
+    "docker:down": "docker compose -f ./postgres/docker-compose.yml down"
   },
   "repository": {
     "type": "git",
@@ -16,6 +18,7 @@
   "type": "module",
   "dependencies": {
     "dotenv": "^16.3.2",
+    "pg": "^8.12.0",
     "puppeteer": "^21.7.0",
     "puppeteer-core": "^21.7.0"
   }
